# clinical_document_retrieval

./: .env.example  .gitignore  DESIGN.md  Makefile  OUTPUTS.md  README.md  RUNBOOK.md  compose.yaml  pyproject.toml
configs/: clinical_lexicon.yaml  default.yaml  evaluation.yaml  models.yaml
data/evaluation/: evaluation_dataset.json
outputs/: ablation_summary.json  error_analysis.csv  evaluation_details.json  evaluation_summary.json  grounding_report.json  latency_profile.json  retrieval_results.json
scripts/: ablate.py  answer.py  build_index.py  enqueue_ingest.py  evaluate.py  evaluate_synth.py  generate_synth_docs.py  ingest.py  ingest_synth.py  ingest_worker.py  profile_latency.py  report_grounding.py  retrieve.py  serve_api.py
src/clinical_retrieval/: __init__.py  config.py  device.py  pipeline.py  schemas.py  tf_guards.py
src/clinical_retrieval/api/: app.py  pipeline_jobs.py
src/clinical_retrieval/chunking/: chunk_builder.py  contextualizer.py
src/clinical_retrieval/evaluation/: evaluator.py  evidence_matcher.py  grounding_report.py  metrics.py
src/clinical_retrieval/generation/: __init__.py  answer.py
src/clinical_retrieval/indexing/: bm25_index.py  build.py  dense_index.py  qdrant_dense.py  structured_store.py  visual_index.py
src/clinical_retrieval/ingestion/: docling_extract.py  job_queue.py  ocr_fallback.py  page_renderer.py  pdf_validator.py  pymupdf_extractor.py
tests/: test_device.py  test_encounter_parser.py  test_grounding_and_answer.py  test_metrics.py  test_ocr_fallback.py  test_structure_parsers.py  test_table_parser.py
(+20 files in other folders)
